# FishSim

./: Cargo.toml
src/: dioxus_app.rs  main.rs  topography.rs
