[package]
name = "fish_pop_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0" }
dioxus-web = "0.6.0"
dioxus-free-icons = "0.6"
rand = { version = "0.9.0", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
